--- a/IntugineHiringTask/src/index.html
+++ b/IntugineHiringTask/src/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>IntugineHiringTask</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|ZCOOL+QingKe+HuangYou" rel="stylesheet"></head>
 <body>
   <app-root></app-root>
 </body>
